Format change ids in listing tables with a fixed with font
This way the ids all align nicely.  Since every string is roughly
41 bytes in length and was truncated down to 9 digits for display,
they should take up the same screen width for each value.

--- a/src/main/java/com/google/gerrit/public/gerrit.css
+++ b/src/main/java/com/google/gerrit/public/gerrit.css
@@ -302,9 +302,10 @@
 }
 
 .gerrit-ChangeTable .C_ID {
-  white-space: nowrap;
   width: 3.5em;
-  text-align: right;
+}
+.gerrit-ChangeTable .DataCell.C_ID {
+  font-family: monospace;
   font-size: x-small;
 }
 
